--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" src="./CSS/stylesheet.css">
   <style>
       * {
         font-family: 'Poppins', sans-serif;
@@ -18,8 +19,10 @@
         <p style="padding-left: 40px; font-size: 18px; color: white; font-weight: 700;">Area-27v2 Roadmap</p>
         <img src = "https://creepysins.com/scpf-logo.png" height="50px" width="75px" style="margin-top: auto; margin-bottom: auto; padding-left: 15px;">
     </div>
-    <div class = "w3-container">
-        <script src="./JS/main.js"></script>
+    <script src="./JS/main.js"></script>
+    <div id="Container"></div>
+    <div class="footer" style="background-color: rgb(43, 144, 226); padding-top: 2px; padding-bottom: 2px;">
+        <p class="footer-p" style="text-align: center; color: white; font-weight: 900;">Created by Aaron Long (Thomastrainiac) for Bulk Games</p>
     </div>
 </body>
 </html>
