--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Area-27</title>
+  <link rel="icon" type="image/x-icon" href="https://creepysins.com/scpf-logo.png">
   <meta charset="utf-8">
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> */ -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
